--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -8,7 +8,7 @@
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">詳細: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">設定</string>
-    <string name="menu_template">Template</string>
+    <string name="menu_template">テンプレ</string>
     <string name="menu_update">更新を確認</string>
     <string name="menu_report">問題を報告</string>
     <string name="menu_export">エクスポート</string>
@@ -20,14 +20,14 @@
     <string name="menu_app_launch">アプリを起動</string>
     <string name="menu_app_settings">設定</string>
     <string name="menu_app_store">Playストア</string>
-    <string name="menu_accounts">Select accounts to allow</string>
-    <string name="menu_contacts">Select contacts to allow</string>
+    <string name="menu_accounts">許可するアカウントを選択</string>
+    <string name="menu_contacts">許可する電話帳を選択</string>
     <string name="msg_noupdate">更新はありません</string>
     <string name="msg_restricted" formatted="false">%s をXPrivacyが制限しました</string>
     <string name="msg_licensed" formatted="false">ライセンス先: %s</string>
     <string name="msg_loading">読み込み中</string>
     <string name="msg_edit">アプリアイコンをタップすると全ての権限の制限を設定できます</string>
-    <string name="msg_sure">Are you sure?</string>
+    <string name="msg_sure">続行しますか?</string>
     <string name="msg_done">完了</string>
     <string name="restrict_accounts">アカウント (Google, Facebookなど)</string>
     <string name="restrict_browser">ブラウザ (お気に入り/履歴)</string>
@@ -46,7 +46,7 @@
     <string name="restrict_shell">シェル (コマンド, Superuser)</string>
     <string name="restrict_system">システム (インストール済みアプリ)</string>
     <string name="restrict_view">表示 (ブラウザ)</string>
-    <string name="title_category">Category:</string>
+    <string name="title_category">カテゴリ:</string>
     <string name="title_restrict">チェックで制限:</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">経度</string>
@@ -56,7 +56,7 @@
     <string name="settings_country">国</string>
     <string name="settings_subscriber">契約者固有ID</string>
     <string name="settings_fpermission">権限でフィルタ</string>
-    <string name="settings_fsystem">Filter system applications</string>
+    <string name="settings_fsystem">システムアプリをフィルタ</string>
     <string name="settings_expert">上級者向けモード</string>
     <string name="help_application">アプリ</string>
     <string name="help_internet">はインターネット権限を持っています</string>
