--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -20,14 +20,14 @@
     <string name="menu_app_launch">Lancer</string>
     <string name="menu_app_settings">Paramètres</string>
     <string name="menu_app_store">Play Store</string>
-    <string name="menu_accounts">Select accounts to allow</string>
-    <string name="menu_contacts">Select contacts to allow</string>
+    <string name="menu_accounts">Choisir les comptes à autoriser</string>
+    <string name="menu_contacts">Choisir les contacts à autoriser</string>
     <string name="msg_noupdate">Pas de mise à jour disponible</string>
     <string name="msg_restricted" formatted="false">%s restreint par XPrivacy</string>
     <string name="msg_licensed" formatted="false">Autorisé à: %s</string>
     <string name="msg_loading">Loading</string>
-    <string name="msg_edit">Click the application icon to edit all restrictions</string>
-    <string name="msg_sure">Are you sure?</string>
+    <string name="msg_edit">Cliquer sur l'icône de l'application pour éditer les restrictions</string>
+    <string name="msg_sure">Etes-vous certain ?</string>
     <string name="msg_done">Effectué</string>
     <string name="restrict_accounts">Comptes (Google, Facebook, etc)</string>
     <string name="restrict_browser">Navigateur (marque-pages/historique)</string>
@@ -46,7 +46,7 @@
     <string name="restrict_shell">Shell (commandes, root)</string>
     <string name="restrict_system">Système (applis installées)</string>
     <string name="restrict_view">Vue (navigateur)</string>
-    <string name="title_category">Category:</string>
+    <string name="title_category">Categorie:</string>
     <string name="title_restrict">Vérifier les restrictions:</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
@@ -56,7 +56,7 @@
     <string name="settings_country">Pays</string>
     <string name="settings_subscriber">ID Abonné</string>
     <string name="settings_fpermission">Filtrer par permissions</string>
-    <string name="settings_fsystem">Filter system applications</string>
+    <string name="settings_fsystem">Filtrer les applications systèmes</string>
     <string name="settings_expert">Mode expert</string>
     <string name="help_application">Application</string>
     <string name="help_internet">a les permissions Internet</string>
