--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -26,7 +26,7 @@
     <string name="msg_restricted" formatted="false">%s restreint par XPrivacy</string>
     <string name="msg_licensed" formatted="false">Autorisé à: %s</string>
     <string name="msg_loading">Loading</string>
-    <string name="msg_edit">Cliquer sur l'icône de l'application pour éditer les restrictions</string>
+    <string name="msg_edit">Cliquer sur l\'icône de l\'application pour éditer les restrictions</string>
     <string name="msg_sure">Etes-vous certain ?</string>
     <string name="msg_done">Effectué</string>
     <string name="restrict_accounts">Comptes (Google, Facebook, etc)</string>
