Updated Simplified Chinese translation
Fixed some translations

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -8,7 +8,7 @@
     <string name="app_copyright">版权所有 \u00A9 2013 M. Bokhorst (M66B)</string>
     <string name="app_info">详情: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">设置</string>
-    <string name="menu_template">规则模板</string>
+    <string name="menu_template">默认模板</string>
     <string name="menu_update">检查更新</string>
     <string name="menu_report">报告问题</string>
     <string name="menu_export">导出配置</string>
@@ -16,7 +16,7 @@
     <string name="menu_theme">切换主题</string>
     <string name="menu_pro">专业版</string>
     <string name="menu_about">关于</string>
-    <string name="menu_all">全选</string>
+    <string name="menu_all">全部</string>
     <string name="menu_app_launch">启动</string>
     <string name="menu_app_settings">设置</string>
     <string name="menu_app_store">Play 商店</string>
@@ -55,9 +55,9 @@
     <string name="settings_id">Android ID</string>
     <string name="settings_country">国家</string>
     <string name="settings_subscriber">IMSI</string>
-    <string name="settings_fpermission">按权限筛选</string>
-    <string name="settings_fsystem">筛选系统应用</string>
-    <string name="settings_expert">专家模式</string>
+    <string name="settings_fpermission">隐藏无关权限</string>
+    <string name="settings_fsystem">隐藏系统应用</string>
+    <string name="settings_expert">启用专家模式</string>
     <string name="help_application">应用</string>
     <string name="help_internet">表示联网的权限</string>
     <string name="help_granted">表示授予的权限</string>
