--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -8,7 +8,7 @@
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">Ustawienia</string>
-    <string name="menu_template">Template</string>
+    <string name="menu_template">Szablon</string>
     <string name="menu_update">Sprawdź aktualizacje</string>
     <string name="menu_report">Zgłoś problem</string>
     <string name="menu_export">Eksport</string>
@@ -20,14 +20,14 @@
     <string name="menu_app_launch">Uruchom</string>
     <string name="menu_app_settings">Ustawienia</string>
     <string name="menu_app_store">Play Store</string>
-    <string name="menu_accounts">Select accounts to allow</string>
-    <string name="menu_contacts">Select contacts to allow</string>
+    <string name="menu_accounts">Wybierz dozwolone konta</string>
+    <string name="menu_contacts">Wybierz dozwolone kontakty</string>
     <string name="msg_noupdate">Brak aktualizacji</string>
     <string name="msg_restricted" formatted="false">%s jest ograniczone przez XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencjonowane dla: %s</string>
     <string name="msg_loading">Ładowanie</string>
     <string name="msg_edit">Kliknij na ikonę aplikacji aby zmodyfikować wszystkie ograniczenia</string>
-    <string name="msg_sure">Are you sure?</string>
+    <string name="msg_sure">Czy jesteś pewny/a?</string>
     <string name="msg_done">Gotowe</string>
     <string name="restrict_accounts">Konta (Google, Facebook, etc)</string>
     <string name="restrict_browser">Przeglądarka (zakładki/historia)</string>
@@ -56,7 +56,7 @@
     <string name="settings_country">Kraj</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filtruj według uprawnień</string>
-    <string name="settings_fsystem">Filter system applications</string>
+    <string name="settings_fsystem">Filtruj aplikacje systemowe</string>
     <string name="settings_expert">Tryb eksperta</string>
     <string name="help_application">Aplikacja</string>
     <string name="help_internet">wymaga dostępu do internetu</string>
