--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,8 @@
     <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
-    <string name="app_help" translatable="false">https://github.com/M66B/XPrivacy#restrictions</string>
+    <string name="app_help" translatable="false">https://github.com/M66B/XPrivacy#xprivacy</string>
+    <string name="app_support" translatable="false">http://forum.xda-developers.com/showthread.php?t=2320783</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_template">Template</string>
     <string name="menu_update">Check for update</string>
