--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="app_version" formatted="false">XPrivacy version: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
-    <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
     <string name="app_help" translatable="false">https://github.com/M66B/XPrivacy#xprivacy</string>
     <string name="app_support" translatable="false">http://forum.xda-developers.com/showthread.php?t=2320783</string>
+    <string name="app_flattr" translatable="false">http://flattr.com/thing/1491121/XPrivacy-XDA</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_template">Template</string>
     <string name="menu_update">Check for update</string>
@@ -19,7 +19,6 @@
     <string name="menu_import">Import</string>
     <string name="menu_theme">Switch theme</string>
     <string name="menu_pro">Pro version</string>
-    <string name="menu_flattr" translatable="false">Flattr</string>
     <string name="menu_about">About</string>
     <string name="menu_all">All</string>
     <string name="menu_app_launch">Launch</string>
