Add legend for colors in help

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -60,5 +60,7 @@
     <string name="help_internet">لديه صلاحية الوصول للإنترنت</string>
     <string name="help_granted">لديه صلاحية أندرويد</string>
     <string name="help_used">يستخدم هذه البيانات</string>
-
+    <string name="help_system">is system application</string>
+    <string name="help_dangerous">is dangerous category</string>
+    
 </resources>
