--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -60,5 +60,7 @@
     <string name="help_internet">internet izni var</string>
     <string name="help_granted">Android izni var</string>
     <string name="help_used">bu izni kullandı</string>
-
+    <string name="help_system">is system application</string>
+    <string name="help_dangerous">is dangerous category</string>
+    
 </resources>
