--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -60,5 +60,7 @@
     <string name="help_internet">има разрешение за интернет</string>
     <string name="help_granted">има разрешение в Android</string>
     <string name="help_used">използвало е тези данни</string>
-
+    <string name="help_system">is system application</string>
+    <string name="help_dangerous">is dangerous category</string>
+    
 </resources>
