--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -60,5 +60,7 @@
     <string name="help_internet">are permisiune Internet</string>
     <string name="help_granted">are permisiune Android</string>
     <string name="help_used">a utilizat aceste date</string>
-
+    <string name="help_system">is system application</string>
+    <string name="help_dangerous">is dangerous category</string>
+    
 </resources>
