--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -60,7 +60,6 @@
     <string name="help_internet">hat Internet Berechtigung</string>
     <string name="help_granted">hat Android Berechtigung</string>
     <string name="help_used">hat diese Daten benutzt</string>
-    <string name="help_system">is system application</string>
-    <string name="help_dangerous">is dangerous category</string>
+    <string name="help_dangerous">is dangerous</string>
     
 </resources>
