--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -60,7 +60,6 @@
     <string name="help_internet">heeft internet rechten</string>
     <string name="help_granted">heeft Android rechten</string>
     <string name="help_used">heeft deze data gebruikt</string>
-    <string name="help_system">is systeem applicatie</string>
-    <string name="help_dangerous">is gevaarlijke categorie</string>
+    <string name="help_dangerous">is gevaarlijk</string>
     
 </resources>
