--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -60,7 +60,6 @@
     <string name="help_internet">har internetbehörighet</string>
     <string name="help_granted">har Android-behörighet</string>
     <string name="help_used">har använt denna data</string>
-    <string name="help_system">is system application</string>
-    <string name="help_dangerous">is dangerous category</string>
+    <string name="help_dangerous">is dangerous</string>
     
 </resources>
