--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -1,20 +1,15 @@
 <resources>
 
-    <!-- Translators: do not include texts with translatable="false" -->
-    <string name="app_name" translatable="false">XPrivacy</string>
-    <string name="app_notxposed" formatted="false">La versió %d+ d'Xposed framework no està instal·lada</string>
+    <string name="app_notxposed" formatted="false">La versió %d+ d\'Xposed framework no està instal·lada</string>
     <string name="app_notenabled">XPrivacy no està habilitat a l'instal·lador d'Xposed</string>
-    <string name="app_wrongandroid">Només ha sigut provat amb les versions 4.0, 4.1 i 4.2 d'Android</string>
-    <string name="app_version" formatted="false">Versió d'XPrivacy: %s (%d)</string>
-    <string name="app_xversion" formatted="false">Versió d'Xposed framework: %d</string>
+    <string name="app_wrongandroid">Només ha sigut provat amb les versions 4.0, 4.1 i 4.2 d\'Android</string>
+    <string name="app_version" formatted="false">Versió d\'XPrivacy: %s (%d)</string>
+    <string name="app_xversion" formatted="false">Versió d\'Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 per M. Bokhorst (M66B)</string>
-    <string name="app_help" translatable="false">https://github.com/M66B/XPrivacy#xprivacy</string>
-    <string name="app_support" translatable="false">http://forum.xda-developers.com/showthread.php?t=2320783</string>
-    <string name="app_flattr" translatable="false">http://flattr.com/thing/1491121/XPrivacy-XDA</string>
     <string name="menu_settings">Configuració</string>
     <string name="menu_template">Plantilla</string>
     <string name="menu_update">Comprova actualitzacions</string>
-    <string name="menu_report">Informa d'un problema</string>
+    <string name="menu_report">Informa d\'un problema</string>
     <string name="menu_export">Exporta</string>
     <string name="menu_import">Importa</string>
     <string name="menu_theme">Canvia tema</string>
@@ -30,7 +25,7 @@
     <string name="msg_restricted" formatted="false">%s restringit per XPrivacy</string>
     <string name="msg_licensed" formatted="false">Llicenciat a: %s</string>
     <string name="msg_loading">Carregant</string>
-    <string name="msg_edit">Prem la icona de l'aplicació per a editar tots els permisos</string>
+    <string name="msg_edit">Prem la icona de l\'aplicació per a editar tots els permisos</string>
     <string name="msg_sure">Esteu segur?</string>
     <string name="msg_done">Fet</string>
     <string name="restrict_accounts">Comptes (Google, Facebook, etc.)</string>
@@ -39,17 +34,15 @@
     <string name="restrict_calling">Trucades (telèfon, SMS, MMS)</string>
     <string name="restrict_contacts">Contactes</string>
     <string name="restrict_dictionary">Diccionari (usuari)</string>
-    <string name="restrict_email" translatable="false">E-mail</string>
     <string name="restrict_identification">Identificació (dispositiu)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Ubicació (precisa/aproximada)</string>
     <string name="restrict_media">Mitjans (àudio, imatges, vídeos)</string>
     <string name="restrict_messages">Missatges (SMS, MMS)</string>
     <string name="restrict_network">Xarxa (adreces)</string>
-    <string name="restrict_nfc" translatable="false">NFC</string>
     <string name="restrict_phone">Telèfon (ID, números, trucades)</string>
     <string name="restrict_storage">Emmagatzematge (mitjans, targeta SD)</string>
-    <string name="restrict_shell">Intèrpret d'ordres (ordres, superusuari)</string>
+    <string name="restrict_shell">Intèrpret d\'ordres (ordres, superusuari)</string>
     <string name="restrict_system">Sistema (aplicacions instal·lades)</string>
     <string name="restrict_view">Vista (navegador)</string>
     <string name="title_category">Categoria:</string>
@@ -57,22 +50,16 @@
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
     <string name="settings_mac">Adreça MAC</string>
-    <string name="settings_imei" translatable="false">IMEI</string>
     <string name="settings_phone">Número de telèfon</string>
-    <string name="settings_id">ID d'Android</string>
-    <string name="settings_gsfid" translatable="false">GSF ID</string>
-    <string name="settings_mcc" translatable="false">MCC</string>
-    <string name="settings_mnc" translatable="false">MNC</string>
+    <string name="settings_id">ID d\'Android</string>
     <string name="settings_country">País</string>
-    <string name="settings_iccid" translatable="false">ICC ID</string>
     <string name="settings_subscriber">ID de subscriptor</string>
     <string name="settings_fpermission">Filta per permís</string>
     <string name="settings_fsystem">Filtra aplicacions de sistema</string>
     <string name="help_application">Aplicació</string>
-    <string name="help_internet">té permís d'Internet</string>
-    <string name="help_granted">té permisos d'Android</string>
+    <string name="help_internet">té permís d\'Internet</string>
+    <string name="help_granted">té permisos d\'Android</string>
     <string name="help_used">ha utilitzat aquesta informació</string>
-    <string name="help_system">és una aplicació de sistema</string>
-    <string name="help_dangerous">és una categoria perillosa</string>
+    <string name="help_dangerous">is dangerous</string>
 
 </resources>
