--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -28,6 +28,7 @@
     <string name="msg_edit">Klicka på appikonen för att ändra alla restriktioner</string>
     <string name="msg_sure">Är du säker?</string>
     <string name="msg_done">Klar</string>
+    <string name="msg_reboot">Reboot required</string>
     <string name="restrict_accounts">Konton (Google, Facebook, m.fl.)</string>
     <string name="restrict_browser">Webbläsare (bokmärken/historik)</string>
     <string name="restrict_calendar">Kalender</string>
