--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -28,7 +28,7 @@
     <string name="msg_edit">点击应用图标修改所有权限</string>
     <string name="msg_sure">你确定吗?</string>
     <string name="msg_done">完成</string>
-    <string name="msg_reboot">Reboot required</string>
+    <string name="msg_reboot">设备需要重启</string>
     <string name="restrict_accounts">账户 (Google, Facebook等等)</string>
     <string name="restrict_browser">浏览器 (书签/历史)</string>
     <string name="restrict_calendar">日历</string>
