--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -7,7 +7,7 @@
     <string name="app_xversion" formatted="false">إطار  Xposed نسخة : %d</string>
     <string name="app_copyright">حقوق الطبع \u00A9 2013 ب M. Bokhorst (M66B)</string>
     <string name="menu_settings">الإعدادات</string>
-    <string name="menu_template">Template</string>
+    <string name="menu_template">القالب</string>
     <string name="menu_update">فحص التحديثات</string>
     <string name="menu_report">التبليغ عن مشكلة</string>
     <string name="menu_export">تصدير</string>
@@ -19,16 +19,16 @@
     <string name="menu_app_launch">تشغيل التطبيق</string>
     <string name="menu_app_settings">إعدادات التطبيق</string>
     <string name="menu_app_store">متجر قوقل</string>
-    <string name="menu_accounts">Select accounts to allow</string>
-    <string name="menu_contacts">Select contacts to allow</string>
+    <string name="menu_accounts">إختر الحسابات التي تود تمكينها</string>
+    <string name="menu_contacts">إختر الأسماء التي تود تمكينها</string>
     <string name="msg_noupdate">لا توجد تحديثات متاحة</string>
     <string name="msg_restricted" formatted="false">%s تم تقيده بواسطة XPrivacy</string>
     <string name="msg_licensed" formatted="false">مرخص ل: %s</string>
     <string name="msg_loading">جاري التحميل</string>
-    <string name="msg_edit">Click the application icon to edit all restrictions</string>
-    <string name="msg_sure">Are you sure?</string>
+    <string name="msg_edit">إضغط ايقونة التطبيق لتعديل كل القيود</string>
+    <string name="msg_sure">هل أنت متأكد ؟</string>
     <string name="msg_done">إنتهى</string>
-    <string name="msg_reboot">Reboot required</string>
+    <string name="msg_reboot">يحتاج إعادة تشغيل</string>
     <string name="restrict_accounts">الحسابات (قوقل , فيسبوك , الخ)</string>
     <string name="restrict_browser">المتصفح (العلامات,السجل)</string>
     <string name="restrict_calendar">التقويم</string>
@@ -46,21 +46,21 @@
     <string name="restrict_shell">سطر الأوامر (الأوامر,المستخدم الجذر)</string>
     <string name="restrict_system">النظام (البرامج المنزلة)</string>
     <string name="restrict_view">تصفح (المتصفح)</string>
-    <string name="title_category">Category:</string>
+    <string name="title_category">الفئة:</string>
     <string name="title_restrict">إختر للتقيد:</string>
     <string name="settings_lat">خط العرض</string>
     <string name="settings_lon">خط الطول</string>
     <string name="settings_mac">عنوان الماك</string>
     <string name="settings_phone">رقم الهاتف</string>
-    <string name="settings_id">معرف اندرويد</string>
+    <string name="settings_id">هوية اندرويد</string>
     <string name="settings_country">الدولة</string>
     <string name="settings_subscriber">IMSI</string>
     <string name="settings_fpermission">تصفية بواسطة الأُذونات</string>
-    <string name="settings_fsystem">Filter system applications</string>
+    <string name="settings_fsystem">فلترة برامج النظام</string>
     <string name="help_application">التطبيق</string>
     <string name="help_internet">لديه صلاحية الوصول للإنترنت</string>
     <string name="help_granted">لديه صلاحية أندرويد</string>
     <string name="help_used">يستخدم هذه البيانات</string>
-    <string name="help_dangerous">is dangerous</string>
+    <string name="help_dangerous">خطير</string>
     
 </resources>
