--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -28,7 +28,7 @@
     <string name="msg_edit">Klicka på appikonen för att ändra alla restriktioner</string>
     <string name="msg_sure">Är du säker?</string>
     <string name="msg_done">Klar</string>
-    <string name="msg_reboot">Reboot required</string>
+    <string name="msg_reboot">Omstart krävs</string>
     <string name="restrict_accounts">Konton (Google, Facebook, m.fl.)</string>
     <string name="restrict_browser">Webbläsare (bokmärken/historik)</string>
     <string name="restrict_calendar">Kalender</string>
@@ -61,6 +61,6 @@
     <string name="help_internet">har internetbehörighet</string>
     <string name="help_granted">har Android-behörighet</string>
     <string name="help_used">har använt denna data</string>
-    <string name="help_dangerous">is dangerous</string>
+    <string name="help_dangerous">är farlig</string>
     
 </resources>
