--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -37,6 +37,7 @@
     <string name="restrict_dictionary">Dictionnaire (utilisateur)</string>
     <string name="restrict_identification">Identification (Matériel)</string>
     <string name="restrict_internet">Internet</string>
+    <string name="restrict_isolation">Isolated storage</string>
     <string name="restrict_location">Localisation (précise/approximative)</string>
     <string name="restrict_media">Média (audio, photo, vidéo)</string>
     <string name="restrict_messages">Messages (SMS, MMS)</string>
