--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -37,6 +37,7 @@
     <string name="restrict_dictionary">Słownik (użytkownik)</string>
     <string name="restrict_identification">Identyfikacja (urządzenie)</string>
     <string name="restrict_internet">Internet</string>
+    <string name="restrict_isolation">Isolated storage</string>
     <string name="restrict_location">Położenie (dokładne/przybliżone)</string>
     <string name="restrict_media">Media (audio, foto, wideo)</string>
     <string name="restrict_messages">Wiadomości (SMS, MMS)</string>
