--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -37,6 +37,7 @@
     <string name="restrict_dictionary">Ordlista (användare)</string>
     <string name="restrict_identification">Identifikation (enhet)</string>
     <string name="restrict_internet">Internet</string>
+    <string name="restrict_isolation">Isolated storage</string>
     <string name="restrict_location">Position (exakt/ungefärlig)</string>
     <string name="restrict_media">Media (ljud, foto, video)</string>
     <string name="restrict_messages">Meddelanden (SMS, MMS)</string>
